--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
     <body>
+        <div class = wrapper>
+            
+        </div>
 
         <script type="text/javascript" src="index.js"></script>
     </body>
