--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
          height: 100%;
          }
          .wrapper {
-         background-color: #5F64D3;
+         background-color: #E6E1C3;
          padding-top: 100px;
          }
          body {
@@ -66,8 +66,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #26175A;
-         color: white;
+         background-color: #C1C72C;
+         color: black;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -78,7 +78,7 @@
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid #73448C;
+         border: 6px solid #black;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -121,8 +121,8 @@
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: #26175A;
-           color: white;
+           background-color: #C1C72C;
+           color: black;
            margin: 20px;
          }
          
@@ -142,10 +142,59 @@
             zoom: .75; 
           } 
          }
-      </style>    
+      </style>
       <body>
-      <div class = wrapper>
-          Name: Whitney Broadfoot
+      <div class="wrapper">
+         <div class="photo-header">
+            <img src="https://avatars1.githubusercontent.com/u/55456375?v=4" alt="Photo of whitneybroadfoot" />
+            <h1>Hi!</h1>
+            <h2>
+            My name is Whitney Broadfoot!</h1>
+            <h5>Advancing my skills in: HTML, CSS, JavaScript, jQuery, Node.js, PHP, Laravel, Express.js, React.js, Database Theory, MongoDB, MySQL, Command Line, Git </h5>
+            <nav class="links-nav">
+               <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/place/Denver, Colorado"><i class="fas fa-location-arrow"></i> [object Object]</a>
+               <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://api.github.com/users/whitneybroadfoot"><i class="fab fa-github-alt"></i> GitHub</a>
+              <a class="nav-link" target="_blank" rel="noopener noreferrer" href="www.linkedin.com/in/wbroadfoot"><i class="fas fa-rss"></i> Blog</a>
+            </nav>
+         </div>
+         <main>
+            <div class="container">
+            <div class="row">
+               <div class="col">
+               <h3>Company</h3>
+                  <h3>null</h3>
+               </div>
+            </div>
+               <div class="row">
+                <div class="col">
+                    <div class="card">
+                      <h3>Public Repositories</h3>
+                      <h4>24</h4>
+                    </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <h3>Followers</h3>
+                    <h4>11</h4>
+                  </div>
+               </div>
+               </div>
+               <div class="row">
+               <div class="col">
+               <div class="card">
+                  <h3>GitHub Stars</h3>
+                  <h4>3</h4>
+                  </div>
+               </div>
+                <div class="col">
+                <div class="card">
+                  <h3>Following</h3>
+                  <h4>https://api.github.com/users/whitneybroadfoot/following{/other_user}</h4>
+                  </div>
+               </div>
+               </div>
+            </div>
+         </main>
       </div>
-
-  </body>
+   </body>
+      
